--- a/Application Code/upstyle.css
+++ b/Application Code/upstyle.css
@@ -11,10 +11,6 @@ h1{
 	text-align: center;
 }
 
-ul{
-	list-style-type: circle;
-}
-
 .move{
   font-size: 20px;
   padding: 20px ;
@@ -22,8 +18,11 @@ ul{
   height:auto;
   width:auto;
 }
-
+.check{
+  font-size: 25px;
+}
 table {
+  padding-top: 0.1em;
   border-collapse: collapse;
   width:90%;
   text-align: center;
@@ -42,7 +41,6 @@ th {
   background-color: #4CAF50;
   color: white;
 }
-
 .pic{
   padding: 10px ;
   border: 3px solid green;
